# Sendspin-kodi

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  readme.md
service.sendspin/: addon.xml  audio.py  kodi.py  logger.py  service.py
service.sendspin/resources/: settings.xml
service.sendspin/tools/: README.md  get_libs.py  libs.txt  pulseaudio-fix.service  reset_audio_device.sh  wait-for-pulse-sink.sh
